--- a/lib/adoptoposs_web/templates/messages/interests.html.leex
+++ b/lib/adoptoposs_web/templates/messages/interests.html.leex
@@ -28,7 +28,7 @@
           </p>
           <p>
             Hint: Share your
-            <%= live_redirect "submitted projects", to: Routes.live_path(@socket, AdoptopossWeb.ProjectLive.Index) %> to let more people know you’re looking for help.
+            <%= live_redirect "submitted projects", to: Routes.live_path(@socket, AdoptopossWeb.ProjectLive) %> to let more people know you’re looking for help.
           </p>
         </div>
       <% else %>
