--- a/lib/adoptoposs_web/templates/repo/repo.html.leex
+++ b/lib/adoptoposs_web/templates/repo/repo.html.leex
@@ -9,7 +9,7 @@
         <span class="text-gray-600 mr-4 md:mb-2">
           Submitted to
           <%= live_redirect "Your Projects",
-            to: Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.ProjectLive.Index),
+            to: Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.ProjectLive),
             class: "text-gray-600 hover:text-gray-700 hover:underline" %>
         </span>
         <span class="flex items-center justify-center h-12 w-12 md:h-16 md:w-16 my-4 md:mb-2 md:mt-0 rounded rounded-full border text-center text-green-700 bg-green-200">
