--- a/lib/adoptoposs_web/templates/landing_page/recommendations.html.leex
+++ b/lib/adoptoposs_web/templates/landing_page/recommendations.html.leex
@@ -48,7 +48,7 @@
     <div class="ml-2 mt-1 text-center">
       <%= live_redirect "Edit Languages",
         to: Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.SettingsLive),
-        class: "md:whitespace-no-wrap" %>
+        class: "md:whitespace-nowrap" %>
     </div>
   </div>
 
