--- a/lib/adoptoposs_web/templates/project/sharing.html.eex
+++ b/lib/adoptoposs_web/templates/project/sharing.html.eex
@@ -23,7 +23,7 @@
         </svg>
       </div>
 
-      <div class="icon-button subtle hidden ml-3" title="Copied" data-copy-success>
+      <div class="icon-button subtle ml-3 hidden" title="Copied" data-copy-success>
         <svg xmlns='http://www.w3.org/2000/svg' class='text-green-400 fill-current' viewBox='0 0 512 512'>
           <path fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='32' d='M416 128L192 384l-96-96'/>
         </svg>
