--- a/lib/adoptoposs_web/templates/messages/interests.html.leex
+++ b/lib/adoptoposs_web/templates/messages/interests.html.leex
@@ -34,7 +34,7 @@
       <% else %>
         <ul class="grid grid-flow-row gap-4">
           <%= for {project, interests} <- @interests do %>
-            <li id="p-<%= project.uuid %>" class="list-item flex flex-col bg-white rounded shadow hover:shadow-md border border-gray-400">
+            <li id="p-<%= project.uuid %>" class="card-item flex flex-col bg-white rounded shadow hover:shadow-md border border-gray-400">
               <div class="p-4 md:p-6">
                 <%= render AdoptopossWeb.SharedView, "project_repo.html",
                     project: project %>
