--- a/lib/adoptoposs_web/templates/project/index.html.leex
+++ b/lib/adoptoposs_web/templates/project/index.html.leex
@@ -23,7 +23,7 @@
 
   <ul id="projects" class="mt-6">
     <%= for project <- @projects do %>
-      <li id="project-<%= project.id %>" class="list-item flex flex-wrap w-full shadow hover:shadow-md mb-4 border border-gray-400 rounded">
+      <li id="project-<%= project.id %>" class="card-item flex flex-wrap w-full shadow hover:shadow-md mb-4 border border-gray-400 rounded">
         <div class="flex flex-col md:flex-row md:justify-between w-full">
           <div class="flex flex-col flex-1 items-start justify-between px-4 md:px-6 pt-4 pb-2 md:pt-6 md:pb-4 bg-white rounded-tl rounded-tr md:rounded-bl md:rounded-tr-none">
             <%= render AdoptopossWeb.SharedView, "project_repo.html", project: project %>
