--- a/lib/adoptoposs_web/templates/project/project.html.leex
+++ b/lib/adoptoposs_web/templates/project/project.html.leex
@@ -1,4 +1,4 @@
-<div id="<%= @id %>" class="list-item shadow hover:shadow-md rounded border border-gray-400">
+<div id="<%= @id %>" class="card-item shadow hover:shadow-md rounded border border-gray-400">
   <div class="flex md:flex-row flex-col justify-between w-full">
     <div class="flex flex-col flex-1 items-start p-4 md:p-6 bg-white overflow-auto rounded-tl rounded-tr md:rounded-bl md:rounded-tr-none">
       <%= render AdoptopossWeb.SharedView, "project_repo.html", project: @project %>
