--- a/lib/adoptoposs_web/templates/project/index.html.leex
+++ b/lib/adoptoposs_web/templates/project/index.html.leex
@@ -72,7 +72,7 @@
           <div class="flex flex-col justify-between flex-1 px-4 pt-4 pb-2 md:px-6 md:pt-6 md:pb-4 bg-gray-200 rounded-br rounded-bl md:rounded-bl-none md:rounded-tr">
             <%= if to_string(@edit_id) == to_string(project.id) do %>
               <%= render AdoptopossWeb.SharedView, "form.html",
-                id: project.id,
+                id: "form-#{project.id}",
                 changeset: @changeset,
                 headline: "I’m looking for…",
                 message_field: :description,
