Replace deprecated render in error layout  with @inner_content

--- a/lib/adoptoposs_web/templates/layout/error.html.eex
+++ b/lib/adoptoposs_web/templates/layout/error.html.eex
@@ -37,7 +37,7 @@
     </header>
 
     <main role="main" class="h-full">
-      <%= render @view_module, @view_template, assigns %>
+      <%= @inner_content %>
     </main>
 
     <footer class="bg-gray-900 text-red-400 py-6 md:py-10">
