--- a/lib/adoptoposs_web/templates/interest/actions.html.heex
+++ b/lib/adoptoposs_web/templates/interest/actions.html.heex
@@ -1,10 +1,10 @@
-<div id="<%= @id %>" class="flex flex-col justify-between h-full">
+<div id={@id} class="flex flex-col justify-between h-full">
   <div>
     <div class="text-gray-700 font-semibold">
       <%= if @project.user_id == @user_id  do %>
         <span class="text-gray-700 text-md">You are looking for:</span>
       <% else %>
-        <a href="<%= @project.user.profile_url %>" title="@<%= @project.user.username %>" class="font-semibold">
+        <a href={@project.user.profile_url} title={"@#{@project.user.username}"} class="font-semibold">
           @<%= @project.user.username %>
         </a>
         <span class="text-gray-700 text-md">is looking for:</span>
@@ -41,7 +41,7 @@
         <% else %>
           <%= render AdoptopossWeb.ProjectView, "sharing.html", project: @project %>
 
-          <div id="btn-<%= @id %>" class="icon-button mb-2 md:mb-0" phx-click="attempt_contact" phx-target="#<%= @id %>" title="Contact maintainer">
+          <div id={"btn-#{@id}"} class="icon-button mb-2 md:mb-0" phx-click="attempt_contact" phx-target={"##{@id}"} title="Contact maintainer">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
               <path d="M464 80H48a16 16 0 00-16 16v320a16 16 0 0016 16h416a16 16 0 0016-16V96a16 16 0 00-16-16zM265.82 284.63a16 16 0 01-19.64 0L89.55 162.81l19.64-25.26L256 251.73l146.81-114.18 19.64 25.26z"/>
             </svg>
