--- a/lib/adoptoposs_web/templates/page/faq.html.heex
+++ b/lib/adoptoposs_web/templates/page/faq.html.heex
@@ -23,7 +23,7 @@
 
     <%= faq "Why is it named \"Adoptoposs\"?" do %>
       The name comes from the platform’s purpose: <b>adopt</b>ing <b>o</b>pen <b>s</b>ource <b>s</b>oftware.
-      </br>
+      <br>
       Connecting these by some reasonable letters, it gives us "Adoptoposs" (and allows us to have a cute adoptoposs as mascot 😉)
     <% end %>
   </div>
@@ -38,7 +38,7 @@
 
       <p>
         Please consider looking for a co-maintainer if you are the <i>only maintainer</i> for your project right now.
-        </br>
+        <br>
         You can read about the benefits of having co-maintainers
         <%= link "here", to: "https://medium.com/p/74c1cd5df5d5?source=friends_link&sk=80b575161642c3ba17d6d4213de8578a" %>.
       </p>
@@ -67,7 +67,7 @@
     <% end %>
 
     <%= faq "Can I submit repos from other services than GitHub?" do %>
-      Currently we only support submitting GitHub repositories.</br>
+      Currently we only support submitting GitHub repositories.<br>
       If you want to submit repos from another service, please
       <%= link "open an issue", to: "https://github.com/adoptoposs/adoptoposs/issues/new" %>
       and let us know.
@@ -83,7 +83,7 @@
         <% else %>
           landing page
         <% end %>.
-        </br>
+        <br>
 
         When logged in, you can write a message to the maintainer by clicking the
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="inline-flex w-4 fill-current mx-1 mb-1">
@@ -129,7 +129,7 @@
 
       <p>
         <b><i>Project owners</i></b> can see your email if you wrote them a message by using the contact form of a project.
-        </br>
+        <br>
         <b><i>People who contacted you</i></b> for a submitted project can see your email, if you replied to them.
       </p>
     <% end %>
