--- a/lib/adoptoposs_web/templates/project/index.html.heex
+++ b/lib/adoptoposs_web/templates/project/index.html.heex
@@ -4,7 +4,7 @@
   <%= if Enum.empty?(@projects) do %>
     <div class="flex flex-col md:p-4 my-6 w-full justify-center items-center">
       <p class="text-lg md:text-2xl text-gray-600 text-center">
-        Great.</br>
+        Great.<br>
         Looks like you’re happy with the maintenance of your Repos.
       </p>
       <div class="flex flex-col w-full p-8 mt-6 justify-center items-center bg-white rounded border border-gray-300 text-gray-600 md:text-lg text-center">
@@ -23,7 +23,7 @@
 
   <ul id="projects" class="mt-6">
     <%= for project <- @projects do %>
-      <li id="project-<%= project.id %>" class="card-item flex flex-wrap w-full shadow hover:shadow-md mb-4 border border-gray-400 rounded">
+      <li id={"project-#{project.id}"} class="card-item flex flex-wrap w-full shadow hover:shadow-md mb-4 border border-gray-400 rounded">
         <div class="flex flex-col md:flex-row md:justify-between w-full">
           <div class="flex flex-col flex-1 items-start justify-between px-4 md:px-6 pt-4 pb-2 md:pt-6 md:pb-4 bg-white rounded-tl rounded-tr md:rounded-bl md:rounded-tr-none">
             <%= render AdoptopossWeb.SharedView, "project_repo.html", project: project %>
@@ -62,7 +62,7 @@
                     </div>
                 <% end %>
 
-                <button type="reset" title="Remove project" id="btn-remove-<%= project.id %>" phx-click="attempt_remove" phx-value-id="<%= project.id %>" class="ml-4 icon-button subtle">
+                <button type="reset" title="Remove project" id={"btn-remove-#{ project.id}"} phx-click="attempt_remove" phx-value-id={project.id} class="ml-4 icon-button subtle">
                   <svg xmlns="http://www.w3.org/2000/svg" class="fill-current" viewBox="0 0 512 512"><path d="M296 64h-80a7.91 7.91 0 00-8 8v24h96V72a7.91 7.91 0 00-8-8z" fill="none"/><path d="M432 96h-96V72a40 40 0 00-40-40h-80a40 40 0 00-40 40v24H80a16 16 0 000 32h17l19 304.92c1.42 26.85 22 47.08 48 47.08h184c26.13 0 46.3-19.78 48-47l19-305h17a16 16 0 000-32zM192.57 416H192a16 16 0 01-16-15.43l-8-224a16 16 0 1132-1.14l8 224A16 16 0 01192.57 416zM272 400a16 16 0 01-32 0V176a16 16 0 0132 0zm32-304h-96V72a7.91 7.91 0 018-8h80a7.91 7.91 0 018 8zm32 304.57A16 16 0 01320 416h-.58A16 16 0 01304 399.43l8-224a16 16 0 1132 1.14z"/></svg>
                 </button>
               <% end %>
