--- a/lib/adoptoposs_web/templates/explore/top_ten_filters.html.heex
+++ b/lib/adoptoposs_web/templates/explore/top_ten_filters.html.heex
@@ -2,11 +2,11 @@
   <%= for {tag, project_count} <- @tags do %>
     <div class="mr-2 mb-2">
       <button
-        id="<%= @id%>-btn-toggle-<%= tag.id %>"
+        id={"#{@id}-btn-toggle-#{tag.id}"}
         class="plain p-0"
-        phx-click="<%= if to_string(tag.id) in @filters, do: @remove_event, else: @add_event %>"
-        phx-value-tag_id="<%= tag.id %>"
-        phx-target="#<%= @phx_target %>">
+        phx-click={if to_string(tag.id) in @filters, do: @remove_event, else: @add_event}}
+        phx-value-tag_id={tag.id}
+        phx-target={"##{@phx_target}"}>
         <%= render AdoptopossWeb.SharedView, "language_tag.html",
           name: tag.name,
           color: tag.color,
