--- a/lib/adoptoposs_web/templates/layout/email.html.heex
+++ b/lib/adoptoposs_web/templates/layout/email.html.heex
@@ -56,7 +56,7 @@
     <mj-section>
       <!-- logo -->
       <mj-column>
-        <mj-image width="384px" src="<%= email_header_image(assigns[:layout_type]) %>" />
+        <mj-image width="384px" src={email_header_image(assigns[:layout_type])} />
       </mj-column>
     </mj-section>
 
@@ -67,7 +67,7 @@
     <mj-section>
       <mj-column>
         <mj-text css-class="text">
-          Thanks for helping open source software. ♡<br/>
+          Thanks for helping open source software. ♡
           Always keep maintaining!
         </mj-text>
 
@@ -75,12 +75,12 @@
           - Your Adoptoposs
         </mj-text>
 
-        <mj-image width="101px" src="<%= Routes.static_url(AdoptopossWeb.Endpoint, "/images/adoptoposs-logo.png")%>" />
+        <mj-image width="101px" src={Routes.static_url(AdoptopossWeb.Endpoint, "/images/adoptoposs-logo.png")} />
       </mj-column>
     </mj-section>
 
     <!-- footer -->
-    <mj-section background-color="<%= email_footer_background(assigns[:layout_type]) %>">
+    <mj-section background-color={email_footer_background(assigns[:layout_type])}>
       <mj-column>
         <mj-text color="white" font-size="12px" font-family="Source Sans Pro" align="center">
           Visit <%= link AdoptopossWeb.Endpoint.host(), to: Routes.live_url(AdoptopossWeb.Endpoint, AdoptopossWeb.LandingPageLive), class: "inline" %> to find co-maintainers for your open source software project.
