--- a/lib/adoptoposs_web/templates/messages/contacted.html.heex
+++ b/lib/adoptoposs_web/templates/messages/contacted.html.heex
@@ -36,7 +36,7 @@
       <% else %>
         <ul class="grid grid-flow-row gap-4">
           <%= for interest <- @interests do %>
-            <li id="interest-<%= interest.id %>" class="card-item shadow hover:shadow-md rounded border border-gray-400">
+            <li id={"interest-#{interest.id}"} class="card-item shadow hover:shadow-md rounded border border-gray-400">
               <div class="flex md:flex-row flex-col justify-between w-full">
                 <div class="flex flex-col flex-1 items-start p-4 md:p-6 bg-white overflow-auto rounded-tl rounded-tr md:rounded-bl md:rounded-tr-none">
                   <%= render AdoptopossWeb.SharedView, "project_repo.html", project: interest.project %>
