--- a/lib/adoptoposs_web/templates/shared/language_tag.html.heex
+++ b/lib/adoptoposs_web/templates/shared/language_tag.html.heex
@@ -1,6 +1,6 @@
-<div class="flex flex-row flex-nowrap min-width-0 items-center font-semibold cursor-default <%= assigns[:class] %>" title="<%= if assigns[:title], do: assigns[:title] %>">
+<div class={"flex flex-row flex-nowrap min-width-0 items-center font-semibold cursor-default #{assigns[:class]}"} title={if assigns[:title], do: assigns[:title]}>
   <div class="w-3 h-3 rounded rounded-full bg-gray-500"
-    style="background-color: <%= @color %>;">
+    style={"background-color: #{@color};"}>
   </div>
   <div class="w-max-content ml-2">
     <%= @name %>
