--- a/lib/adoptoposs_web/templates/sharing/project.html.heex
+++ b/lib/adoptoposs_web/templates/sharing/project.html.heex
@@ -6,7 +6,7 @@
 
     <%= if @project do %>
       <p class="text-gray-600 text-center text-2xl md:text-4xl leading-tight">
-        Contact <span class="">@<%= @project.user.username %></span> to join </br>
+        Contact <span class="">@<%= @project.user.username %></span> to join <br>
         <span class=""><%= AdoptopossWeb.SharedView.project_name(@project) %></span>!
       </p>
     <% end %>
