--- a/lib/adoptoposs_web/templates/layout/root.html.heex
+++ b/lib/adoptoposs_web/templates/layout/root.html.heex
@@ -9,11 +9,11 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href={Routes.static_path(@conn, "/css/app.css")}/>
+    <link rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
     <%= render AdoptopossWeb.SharedView, "google_analytics.html" %>
 
     <%= csrf_meta_tag() %>
-    <script defer type="text/javascript" src={Routes.static_path(@conn, "/js/app.js")}></script>
+    <script defer type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
   </head>
 
   <body>
